--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="css/misestilos.css">
   </head>
   <body>
+    <h1 class="TITULOA">MEGA SABORES.COM</h1>
     <nav>
-    <h2>Receta del dia</h2>
-    <h2>Crea tu dieta</h2>
-    <h2>Zonas geograficas</h2>
-    <h2>Productos</h2>
+    <h2>RECETAS DEL DIA</h2>
+    <h2>SUBI TU APORTE</h2>
+    <h2>COMIDAS TIPICAS</h2>
+    <h2>PRODUCTOS REGIONALES</h2>
   </nav>
     <header>
     <h1 class="titulo"> POLLO A LA CRIOLLA </h1>  <br> <br>
