--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/misestilos.css">
   </head>
   <body>
-    <h1 class="TITULOA">MEGA SABORES.COM</h1>
+     <h1 class="TITULOA"> MEGA SABORES.COM </h1>
     <nav>
     <h2>RECETAS DEL DIA</h2>
     <h2>SUBI TU APORTE</h2>
@@ -39,20 +39,22 @@
 <li>Una vez doradas las papas agregar las supremas para su coccion y condimentar</li>
     <li>Servir caliente</li>
   </ol><br><br>
-</aside>
+</aside><br><br>
+<p class="parrafo2">Si visitas Mendoza por placer o negocios no podes dejar de degustar pescados como el pejerrey y de salmónidos.
+Arrope, tableta mendocina, humita en chala, pasteles fritos, carne a la olla, patitas aliñadas, y las famosas tortitas raspadas para el desayuno o merienda. También se puede degustar del tradicional asado argentino con variedad de ensaladas y postres regionales, empanadas, puchero, carbonada, cazuela de gallina o vegetales al disco.</p>
 <footer>
     <a href="https://www.youtube.com/">
-       <img src="youtube.gif" width="120px" height="100px" alt="">
+       <img src="youtube.gif" width="70px" height="70px" alt="">
   </a>
-  <a href="https://www.google.com/intl/es-419/gmail/about/"> <img src="gmail.gif" width=120px height=100px alt="">
+  <a href="https://www.google.com/intl/es-419/gmail/about/"> <img src="gmail.gif" width=70px height=70px alt="">
   </a>
   <a href= "https://www.google.com.ar/maps/@-32.9187328,-68.7833088,13z">
-  <img src="maps.gif" width="120px" height="100px" >
+  <img src="maps.gif" width="70px" height="70px" >
 </a>
 <a href= "https://api.whatsapp.com/send?phone=2617100513">
-<img src="whatsapp.gif" width="120px" height="100px" >
+<img src="whatsapp.gif" width="70px" height="70px" >
 </a>
-<a href="https://es-la.facebook.com/SomosRecetasCaseras/"> <img src="facebook.gif" widht=120px height=100px> </a>
+<a href="https://es-la.facebook.com/SomosRecetasCaseras/"> <img src="facebook.gif" widht=70px height=70px> </a>
 <h2>  OBTENE MAS RECETAS HACIENDO CLICK EN LOS ICONOS</h2>
 </footer>
 </body>
