--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>MEGA RECETAS.COM</title>
-    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/misestilos.css">
   </head>
   <body>
      <h1 class="TITULOA">SABOR A MENDOZA</h1>
+     <button onclick="cambiarfondo()">eliminar fondo</button>
      <div class="m-4">
     <nav class="nav nav-tabs">
-        <a href="https://www.xrecetas.com/recetas-de/recetas-de-mendoza/" class="nav-item nav-link">MAS RECETAS</a>
+        <a href="https://www.xrecetas.com/recetas-de/recetas-de-mendoza/" class="nav-item nav-link" onclick="cartel()">MAS RECETAS</a>
         <a href="https://www.casadevinosmendoza.com.ar/" class="nav-item nav-link"> VINOS MENDOCINOS</a>
         <a href="https://www.serargentino.com/argentina/tradiciones/el-mercado-central-de-mendoza-un-clasico" class="nav-item nav-link">MERCADO CENTRAL</a>
       <a href="#" class="nav-item nav-link">CONTACTOS</a>
@@ -125,7 +125,6 @@
 </nav>
 
 </footer>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="./js/javascript.js"></script>
 </body>
 </html>
