--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/misestilos.css">
   </head>
   <body>
-     <h1 class="TITULOA">SABOR A MENDOZA</h1>
+     <h1 class="TITULOprinc">SABOR A MENDOZA</h1>
      <button onclick="cambiarfondo()">eliminar fondo</button>
      <div class="m-4">
     <nav class="nav nav-tabs">
@@ -29,8 +29,6 @@
         <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
         <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
     </ol>
-
-    <!-- Wrapper for carousel items -->
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="./Imagenes/pollo 4.jpg" class="d-block w-100" alt="Slide 1">
