--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             <img src="./Imagenes/pollo 4.jpg" class="d-block w-100" alt="Slide 1">
             <div class="carousel-caption d-none d-md-block">
                 <h5>PRIMER PRESENTACION</h5>
-                <p></p>
+
             </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item active">
             <img src="./Imagenes/pollo 2.jpg" class="d-block w-100" alt="Slide 2">
             <div class="carousel-caption d-none d-md-block">
                 <h5>SEGUNDA PRESENTACION</h5>
-                <p></p>
+
             </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item active">
             <img src="./Imagenes/pollo 3.jpg" class="d-block w-100" alt="Slide 3">
             <div class="carousel-caption d-none d-md-block">
                 <h5>TERCER PRESENTACION</h5>
-                <p>.</p>
+                
             </div>
         </div>
     </div>
@@ -88,19 +88,19 @@
 <p class=" text-star parrafo2"><strong> Si visitas Mendoza por placer o negocios no podes dejar de degustar pescados como el pejerrey y de salmónidos.Arrope, tableta mendocina, humita en chala, pasteles fritos, carne a la olla, patitas aliñadas, y las famosas tortitas raspadas para el desayuno o merienda. También se puede degustar del tradicional asado argentino con variedad de ensaladas y postres regionales, empanadas, puchero, carbonada, cazuela de gallina o vegetales al disco. Sumado a todo esto..te dejamos la seleccion de los 3 vinos mas destacados de Mendoza.</strong></p>
 
  <div class="conteiner cards">
-  <div class="card 1" style="width: 400px; height:700px";>
+  <div class="card 1 malbec" style="width: 400px; height:700px";>
 <img src="./Imagenes/vino 1.jpeg" class="card-img-top" alt="...">
 <div class="card-body text-center">
     <h5 class="card-title">MALBEC</h5>
-    <p class="card-text">ESTANCIA MENDOZA RESERVA MALBEC x 750cc. Vista: Brillante,de intenso color rojo con destellos violáceos.</p>
+    <p class="card-text"><strong>ESTANCIA MENDOZA RESERVA MALBEC x 750cc. Vista: Brillante,de intenso color rojo con destellos violáceos.</strong></p>
     <a href="#" class=></a>
 </div>
 </div>
-<div class="card 2" style="width: 400px; height: 700px";>
+<div class="card 2 merlot" style="width: 400px; height: 700px";>
     <img src="./Imagenes/merlot2.jpg" class="card-img-top" alt="...">
     <div class="card-body text-center">
         <h5 class="card-title">MERLOT</h5>
-        <p class="card-text">ESTANCIA MENDOZA MERLOT MALBEC x 750cc.Aromas a frutas rojas, cerezas y moras que combinan con notas de pimiento asado y algo de especias.</p>
+        <p class="card-text"><strong>ESTANCIA MENDOZA MERLOT MALBEC x 750cc.Aromas a frutas rojas, cerezas y moras que combinan con notas de pimiento asado y algo de especias.</strong></p>
         <a href="#" class=""></a>
     </div>
 </div>
@@ -108,7 +108,7 @@
     <img src="./Imagenes/cabernet.jpeg" class="card-img-top" alt="...">
     <div class="card-body text-center">
         <h5 class="card-title">CABERNET</h5>
-        <p class="card-text" >Gran Medalla Cabernet Sauvignon x 750cc. De color púrpura profundo,este Cabernet Sauvignon entrega aromas de frutas negras.</p>
+        <p class="card-text" ><strong>Gran Medalla Cabernet Sauvignon x 750cc. De color púrpura profundo,este Cabernet Sauvignon entrega aromas de frutas negras.</strong></p>
         <a href="#" class=""></a>
     </div>
 </div>
