--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>MEGA RECETAS.COM</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/misestilos.css">
-  </head>
+  <link rel="stylesheet" href="css/misestilos.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Potta+One&display=swap" rel="stylesheet">
+ </head>
   <body>
-     <h1 class="TITULOprinc">SABOR A MENDOZA</h1>
+     <h1 class="TITULOprinc">GUSTITOS</h1>
      <button onclick="cambiarfondo()">eliminar fondo</button>
      <div class="m-4">
     <nav class="nav nav-tabs">
@@ -18,48 +19,23 @@
     </nav>
 </div>
     <header>
-    <h1 class="text-center titulo"><i> POLLO A LA CRIOLLA</i> </h1>
+    <h1 class="text-center titulo">POLLO A LA CRIOLLA</h1>
      <br>
   <p class="text-star parrafo1"><strong>El pollo a la criolla o mas conocido como pollo a la cacerola es una clase de plato similar a un estofado con ingredientes autoctonos de la tierra de mendoza, Encontramos para su elaboracion verduras simples como papas,cebollas y zanahorias,condimentadas a sabor del cocinero para enamorar el paladar del comensal.</strong></p>
 </header> <br>
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <!-- Carousel indicators -->
-    <ol class="carousel-indicators">
-        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="./Imagenes/pollo 4.jpg" class="d-block w-100" alt="Slide 1">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>PRIMER PRESENTACION</h5>
 
-            </div>
-        </div>
-        <div class="carousel-item active">
-            <img src="./Imagenes/pollo 2.jpg" class="d-block w-100" alt="Slide 2">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>SEGUNDA PRESENTACION</h5>
-
-            </div>
-        </div>
-        <div class="carousel-item active">
-            <img src="./Imagenes/pollo 3.jpg" class="d-block w-100" alt="Slide 3">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>TERCER PRESENTACION</h5>
-                
-            </div>
-        </div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./Imagenes/pollo 2.jpg" alt="First slide">
     </div>
-
-    <!-- Carousel controls -->
-    <a class="carousel-control-prev" href="#myCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./Imagenes/pollo 3.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./Imagenes/pollo 4.jpg" alt="Third slide">
+    </div>
+  </div>
 </div>
 
 <section>
@@ -84,8 +60,8 @@
     <li>Servir caliente</li>
   </ol><br><br>
 </aside> <br><br><br>
-<h1 class="text-center"><mark>TURISMO Y VINOS</mark></h1>
-<p class=" text-star parrafo2"><strong> Si visitas Mendoza por placer o negocios no podes dejar de degustar pescados como el pejerrey y de salmónidos.Arrope, tableta mendocina, humita en chala, pasteles fritos, carne a la olla, patitas aliñadas, y las famosas tortitas raspadas para el desayuno o merienda. También se puede degustar del tradicional asado argentino con variedad de ensaladas y postres regionales, empanadas, puchero, carbonada, cazuela de gallina o vegetales al disco. Sumado a todo esto..te dejamos la seleccion de los 3 vinos mas destacados de Mendoza.</strong></p>
+<h1 class="text-center turismo">TURISMO Y VINOS</h1>
+<p class=" text-star parrafo2"><strong> Si visitas Mendoza por placer o negocios no podes dejar de degustar pescados como el pejerrey y los salmónidos. El Arrope, tableta mendocina, humita en chala, pasteles fritos, carne a la olla, patitas aliñadas, y las famosas tortitas raspadas para el desayuno o merienda. También se puede degustar del tradicional asado argentino con variedad de ensaladas y postres regionales, empanadas, puchero, carbonada, cazuela de gallina o vegetales al disco. Sumado a todo esto..te dejamos la seleccion de los 3 vinos mas destacados de Mendoza.</strong></p>
 
  <div class="conteiner cards">
   <div class="card 1 malbec" style="width: 400px; height:700px";>
